...
import com.devluque.worddetail.ui.TESTS_TAGS.TITLE_TAG
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.emptyFlow

object TESTS_TAGS {
    const val SWIPE_TAG = "swipe"
    const val TITLE_TAG = "title_tag"
}

@Composable
fun WordDetailScreen(
    word: String,
    viewModel: WordDetailViewModel
...
